--- a/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Views/Home/Index.cshtml
+++ b/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Views/Home/Index.cshtml
@@ -4,30 +4,28 @@
 
 <main>
     <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
+        <h1 id="title">Lời giới thiệu</h1>
+        <p class="lead">Dưới dây là các danh mục </p>
+        
     </section>
 
     <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
+        <section class="col-md-4" aria-labelledby="healthBenefitsTitle">
+            <h2 id="healthBenefitsTitle">Lợi ích cho sức khỏe</h2>
             <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
+                Sinh tố được làm từ các loại trái cây và rau củ tươi giàu vitamin, khoáng chất và chất chống oxy hóa, hỗ trợ cải thiện sức khỏe tim mạch, tăng cường hệ miễn dịch và giữ gìn làn da tươi trẻ.
             </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+           
         </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <section class="col-md-4" aria-labelledby="popularFlavorsTitle">
+            <h2 id="popularFlavorsTitle">Hương vị phổ biến</h2>
+            <p>Thưởng thức các hương vị sinh tố được yêu thích như dâu, xoài, cam, chuối và nhiều loại khác, được làm từ những nguyên liệu tự nhiên, tươi ngon.</p>
+           
         </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <section class="col-md-4" aria-labelledby="customMixTitle">
+            <h2 id="customMixTitle">Tự tạo sinh tố của bạn</h2>
+            <p>Tạo ra sinh tố yêu thích của riêng bạn với công thức cá nhân hóa. Kết hợp các loại trái cây và nguyên liệu yêu thích để tạo ra hương vị độc đáo.</p>
+     
         </section>
     </div>
 </main>
