--- a/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Views/DonHangs/Index.cshtml
+++ b/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Views/DonHangs/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<Project2_Nvv_2210900081.Models.DonHang>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Thông tin đơn hàng";
+    List<Project2_Nvv_2210900081.ModelView.DH_CT> chiTiet = ViewBag.donHangChiTiet as List<Project2_Nvv_2210900081.ModelView.DH_CT>;
 }
 
 <h2>Index</h2>
