--- a/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Areas/AdminNVV/Views/NVVDonHangs/Edit.cshtml
+++ b/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Areas/AdminNVV/Views/NVVDonHangs/Edit.cshtml
@@ -5,22 +5,20 @@
     List<Project2_Nvv_2210900081.ModelView.DH_CT> chiTiet = ViewBag.donHangChiTiet as List<Project2_Nvv_2210900081.ModelView.DH_CT>;
 }
 
-<h2>Edit</h2>
-
+<h2>Thông tin đơn hàng</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>DonHang</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         @Html.HiddenFor(model => model.id)
 
         <div class="form-group">
             @Html.LabelFor(model => model.id_khach_hang, "id_khach_hang", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
+
                 @Html.DropDownList("id_khach_hang", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.id_khach_hang, "", new { @class = "text-danger" })
             </div>
@@ -35,13 +33,6 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.tong_tien, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.tong_tien, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.tong_tien, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
             <label class="control-label col-md-2">Trị giá háo đơn</label>
             <div class="col-md-10"></div>
             <span>@Model.tong_tien</span>
@@ -50,11 +41,19 @@
     <div class="form-group">
         <label class="control-label col-md-2">Trang thái hóa đơn:</label>
         <div class="col-md-10"></div>
-        <select class="form-control">
-            <option value="0">Chờ xử lý</option>
-            <option value="0">Đang xử lý</option>
-            <option value="0">Đang hoàn thành</option>
-        </select>
+       <select class="form-control">
+           <option value="0">Chờ xử lý</option>
+           <option value="0">Đang xử lý</option>
+           <option value="0">Đang hoàn thành</option>
+       </select>
+    </div>
+    
+    <div class="form-group">
+        @Html.LabelFor(model => model.tong_tien, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.tong_tien, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.tong_tien, "", new { @class = "text-danger" })
+        </div>
     </div>
 
     <div class="form-group">
@@ -62,13 +61,9 @@
             <input type="submit" value="Cập nhật đơn hàng" class="btn btn-default" />
         </div>
     </div>
-    
+
 }
 
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
