--- a/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Areas/AdminNVV/Views/Shared/_Layout.cshtml
+++ b/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Areas/AdminNVV/Views/Shared/_Layout.cshtml
@@ -3,16 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Applicatio</title>
+    <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="auth-buttons">
-            <a href="@Url.Action("Login", "Account")" class="btn btn-primary">Đăng nhập</a>
-            <a href="@Url.Action("Register", "Account")" class="btn btn-secondary">Đăng ký</a>
-        </div>
         <div class="container">
             @Html.ActionLink("Trang Giới Thiệu ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
@@ -34,6 +31,37 @@
             </div>
         </div>
     </nav>
+    <div class="container body-content">
+        @RenderBody()
+        <hr />
+        <footer>
+            <p>&copy; @DateTime.Now.Year - My ASP.NET Application Admin</p>
+        </footer>
+    </div>
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
+
+
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                @Html.ActionLink("Home Admin", "Index", "NVVDashBC", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Quản lý đơn hàng", "Index", "NVVDonHangs", new { area = "" }, new { @class = "navbar-brand" })
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                </ul>
+            </div>
+        </div>
+    </div>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
