--- a/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Views/Account/Login.cshtml
+++ b/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Views/Account/Login.cshtml
@@ -1,16 +1,28 @@
-﻿@{
+﻿@model Project2_Nvv_2210900081.Models.KhachHang
+@{
     ViewBag.Title = "Đăng nhập";
 }
 
 <h2>Đăng nhập</h2>
-<form action="/Account/Login" method="post">
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
     <div class="form-group">
-        <label for="username">Tên đăng nhập</label>
-        <input type="text" name="username" class="form-control" required />
+        <label for="email">Email</label>
+        <input type="email" name="email" class="form-control" required />
     </div>
+
     <div class="form-group">
-        <label for="password">Mật khẩu</label>
-        <input type="password" name="password" class="form-control" required />
+        <label for="sdt">Số điện thoại</label>
+        <input type="text" name="sdt" class="form-control" required />
     </div>
+
     <button type="submit" class="btn btn-primary">Đăng nhập</button>
-</form>
+
+    if (ViewBag.Error != null)
+    {
+        <p class="text-danger">@ViewBag.Error</p>
+    }
+}
