--- a/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Views/Account/Register.cshtml
+++ b/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Views/Account/Register.cshtml
@@ -1,22 +1,43 @@
 ﻿
-@model Project2_Nvv_2210900081.Models.NguyenVanVuK22CNT2Entities
+@model Project2_Nvv_2210900081.Models.KhachHang
 @{
     ViewBag.Title = "Đăng ký";
 }
 
 <h2>Đăng ký</h2>
-<form action="/Account/Register" method="post">
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
     <div class="form-group">
-        <label for="username">Tên đăng nhập</label>
-        <input type="text" name="username" class="form-control" required />
+        @Html.LabelFor(model => model.ten, "Tên")
+        @Html.TextBoxFor(model => model.ten, new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.ten)
     </div>
+
     <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" name="email" class="form-control" required />
+        @Html.LabelFor(model => model.email, "Email")
+        @Html.TextBoxFor(model => model.email, new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.email)
     </div>
+
     <div class="form-group">
-        <label for="password">Mật khẩu</label>
-        <input type="password" name="password" class="form-control" required />
+        @Html.LabelFor(model => model.sdt, "Số điện thoại")
+        @Html.TextBoxFor(model => model.sdt, new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.sdt)
     </div>
-    <button type="submit" class="btn btn-secondary">Đăng ký</button>
-</form>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.dia_chi, "Địa chỉ")
+        @Html.TextBoxFor(model => model.dia_chi, new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.dia_chi)
+    </div>
+
+    <button type="submit" class="btn btn-primary">Đăng ký</button>
+
+    if (ViewBag.Error != null)
+    {
+        <p class="text-danger">@ViewBag.Error</p>
+    }
+}
